优化页面操作逻辑

--- a/index.html
+++ b/index.html
@@ -10,206 +10,31 @@
     <link rel="stylesheet" href="plugins/codemirror/theme/vscode-dark.css" />
     <!--支持代码折叠-->
     <link rel="stylesheet" href="plugins/codemirror/addon/fold/foldgutter.css" />
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .i-code,
-        .i-preview {
-            width: 50%;
-            height: 100%;
-            position: absolute;
-            z-index: 1;
-        }
-
-        .i-preview {
-            left: 50%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
-        .i-menu {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 309px;
-            /* height: 309px; */
-            left: -300px;
-            z-index: 3;
-            overflow: hidden;
-            transition: left .5s, opacity .5s, background-color .5s;
-            opacity: 0;
-            text-align: center;
-
-        }
-
-        .i-menu.active {
-            left: 0;
-            opacity: 1;
-            background: linear-gradient(45deg, #6cf, #f66);
-            /* background-color: #1e1e1e; */
-        }
-
-        h5 {
-            color: #fff;
-            text-indent: 10px;
-        }
-
-        div.ui-button,
-        .ui-button {
-            border: 1px solid #f66;
-            padding: 0.6rem 0.9rem;
-            background: #efefef;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 10px;
-            opacity: 0;
-        }
-
-        .ui-button.active {
-            background: linear-gradient(45deg, #f66, #6cf);
-        }
-
-        .i-menu.active .ui-button {
-            opacity: 1;
-        }
-
-        .i-questions>div {
-            display: none
-        }
-
-        .i-questions>div.active {
-            display: block;
-        }
-
-        .i-menu-right {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 49px;
-            right: -40px;
-            z-index: 3;
-            overflow: hidden;
-            transition: left .15s, opacity .15s, background-color .15s;
-            opacity: 0;
-            text-align: center;
-        }
-
-        .i-menu-right:hover {
-            right: 0;
-            background-color: #fff;
-            opacity: 1;
-        }
-
-        css-icon {
-            display: inline-block;
-            height: 1em;
-            width: 1em;
-            font-size: 30px;
-            box-sizing: border-box;
-            text-indent: -9999px;
-            vertical-align: middle;
-            position: relative;
-        }
-
-        css-icon::before,
-        css-icon::after {
-            content: '';
-            box-sizing: inherit;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
-
-        .icon-photo {
-            border: solid transparent;
-            border-width: .1em .05em;
-            box-shadow: inset 0 2px, inset 2px 0, inset -2px 0, inset 0 -2px;
-            border-radius: .2em;
-        }
-
-        .icon-photo::before {
-            width: .3em;
-            height: .3em;
-            border: 2px solid;
-            border-radius: 50%;
-            left: 35%;
-            top: 35%;
-        }
-
-        .icon-photo::after {
-            width: .5em;
-            height: .5em;
-            border-style: solid;
-            border-width: 2px 2px 0 0;
-            left: 60%;
-            -ms-transform: translate(-45%, 20%) rotate(-45deg);
-            transform: translate(-45%, 20%) rotate(-45deg);
-        }
-
-        .icon-info::before {
-            width: .9em;
-            height: .9em;
-            border: 2px solid;
-            border-radius: 50%;
-        }
-
-        .icon-info::after {
-            width: 2px;
-            height: .5em;
-            border-top: .3em solid;
-            border-bottom: .1em solid;
-        }
-
-        .i-operate-btn {
-            padding: 10px 0;
-        }
-
-        .i-operate-btn:hover {
-            background-color: #ccc;
-        }
-
-        .i-question-image {
-            position: fixed;
-            right: 49px;
-            display: none;
-        }
-
-        .i-question-image img {
-            max-height: 100%;
-        }
-
-
-        .icon-photo:hover~.i-question-image {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
     <div class="i-menu" id="j-menu">
         <h5>Wisdom in the mind is better than money in the hand.</h5>
+        <h3>单元列表</h3>
         <div id="j-menu-list">
-            <div class="ui-button active">css</div>
-            <div class="ui-button">dom</div>
-            <div class="ui-button">js</div>
-            <div class="ui-button">es5</div>
-            <div class="ui-button">es6</div>
+            <div class="btn-group">
+                <button class="ui-button active">css</button>
+                <button class="ui-button">dom</button>
+                <button class="ui-button">js</button>
+            </div>
+            <div class="btn-group">
+                <button class="ui-button">es5</button>
+                <button class="ui-button">es6</button>
+            </div>
         </div>
+        <h3>题目列表</h3>
         <div class="i-questions" id="j-questions">
             <div class="active" id="j-css-box"></div>
             <div id="j-dom-box"></div>
             <div id="j-js-box"></div>
+            <div id="j-es5-box"></div>
+            <div id="j-es6-box"></div>
         </div>
     </div>
     <div class="i-code">
@@ -247,183 +72,8 @@
     <script src="plugins/codemirror/addon/fold/foldgutter.js"></script>
     <script src="plugins/codemirror/addon/fold/brace-fold.js"></script>
     <script src="plugins/codemirror/addon/fold/comment-fold.js"></script>
-    <script>
-        let activeBtn = null;
-        let frame = document.getElementById('j-frame');
-        let questions = document.getElementById('j-questions');
-        let cssBox = document.getElementById('j-css-box');
-        let domBox = document.getElementById('j-dom-box');
-        let jsBox = document.getElementById('j-js-box');
-        let jQuestionImage = document.getElementById('j-question-image');
-
-
-        // 初始化textarea
-        var editor = CodeMirror.fromTextArea(document.getElementById('code'), {
-            //实现javascript代码高亮
-            mode: 'application/x-ejs',
-            //显示行号
-            lineNumbers: true,
-            //设置主题
-            theme: 'vscode-dark',
-            //代码折叠
-            lineWrapping: true,
-            foldGutter: true,
-            gutters: ['CodeMirror-linenumbers', 'CodeMirror-foldgutter'],
-            //括号匹配
-            matchBrackets: true,
-            //只读
-            readOnly: true
-        });
-        editor.setSize('100%', '100%');
-
-        function loadXMLDoc(url) {
-            var xmlhttp;
-            if (window.XMLHttpRequest) {
-                //  IE7+, Firefox, Chrome, Opera, Safari 浏览器执行代码
-                xmlhttp = new XMLHttpRequest();
-            } else {
-                // IE6, IE5 浏览器执行代码
-                xmlhttp = new ActiveXObject('Microsoft.XMLHTTP');
-            }
-            xmlhttp.onreadystatechange = function () {
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    // console.log(xmlhttp.responseText)
-                    editor.setValue(xmlhttp.responseText);
-                    return xmlhttp.responseText
-                }
-            }
-            xmlhttp.open('GET', url, true);
-            xmlhttp.send();
-        }
-        function getQueryStringArgs() {
-            let qs = (location.search.length > 0 ? location.search.substring(1) : ""),
-                args = {},
-                items = qs.length ? qs.split('&') : [],
-                item = null,
-                name = null,
-                value = null,
-                i = 0,
-                len = items.length;
-
-            for (i = 0; i < len; i++) {
-                item = items[i].split('=');
-                name = decodeURIComponent(item[0]);
-                value = decodeURIComponent(item[1]);
-                if (name.length) {
-                    args[name] = value;
-                }
-            }
-            return args;
-        };
-        // 还要记录上次选中的状态
-        let url = getQueryStringArgs().url ? getQueryStringArgs().url : 'css1';
-        // 第一次初始化
-        loadXMLDoc('pages/' + url.replace(/[0-9]+/g, '') + '/' + url + '.html');
-        // 初始image
-        jQuestionImage.setAttribute('src', 'images/' + url.replace(/[0-9]+/g, '') + '/' + url + '.png');
-        // 初始化frame
-        frame.src = 'pages/' + url.replace(/[0-9]+/g, '') + '/' + url + '.html'
-
-        function createButtons(section, total) {
-            // 默认遍历 key
-            let fragment = document.createDocumentFragment();
-            for (let i = 0; i < total.length; i++) {
-                let button = document.createElement('button')
-                button.type = 'button'
-                button.className = 'ui-button'
-                button.setAttribute('data-url', section + (i + 1))
-                button.innerText = total[i];
-                if (i == 0 && !activeBtn) {
-                    activeBtn = button;
-                    button.classList.add('active');
-                    // 这个是刷新页面
-                    // location.href='?css=1'
-                    // location.search = '?css=1'
-                }
-                fragment.appendChild(button);
-            }
-            switch (section) {
-                case 'css':
-                    cssBox.appendChild(fragment)
-                    break;
-                case 'dom':
-                    domBox.appendChild(fragment)
-                    break;
-                case 'js':
-                    jsBox.appendChild(fragment)
-                    break;
-                default:
-            }
-            // 因为执行了三次，所以绑定了三次
-        }
-        for (let i in unit) {
-            createButtons(i, unit[i])
-        }
-        // 为按钮们绑定事件
-        document.addEventListener('click', function (event, index) {
-            let element = event.target;
-            if (element.className.includes('ui-button') && element.nodeName == 'BUTTON') {
-                activeBtn.className = 'ui-button';
-                element.classList.add('active');
-                activeBtn = element;
-                // 移除数字
-                let url = element.getAttribute('data-url');
-                // 获取数据，
-                loadXMLDoc('pages/' + url.replace(/[0-9]+/g, '') + '/' + url + '.html');
-                frame.src = 'pages/' + url.replace(/[0-9]+/g, '') + '/' + url + '.html';
-                // 改变图片的地址
-                jQuestionImage.setAttribute('src', 'images/' + url.replace(/[0-9]+/g, '') + '/' + url + '.png');
-                // 改变url地址
-                history.pushState('', '', 'index.html?url=' + url);
-            } else if (element.nodeName == 'DIV' && element.className.includes('ui-button')) {
-
-            }
-        });
-
-        // 为列表添加点击事件
-        let menuList = document.getElementById('j-menu-list');
-        let menuListActive = menuList.childNodes[1];
-        menuList.addEventListener('click', function (event) {
-            let element = event.target;
-            // 需要一处
-            if (element.className.includes('ui-button')) {
-                element.classList.add('active');
-                menuListActive.classList.remove('active');
-                menuListActive = element;
-                cssBox.style.display = 'none';
-                domBox.style.display = 'none';
-                jsBox.style.display = 'none';
-                switch (element.innerText) {
-                    case 'css':
-                        cssBox.style.display = 'block';
-                        break;
-                    case 'dom':
-                        domBox.style.display = 'block';
-                        break;
-                    case 'js':
-                        jsBox.style.display = 'block';
-                        break;
-                    default:
-                }
-            }
-        });
-
-
-        // hover出现界面，点击界面之外地方，界面才会消失
-        let menu = document.getElementById('j-menu');
-        menu.addEventListener('mouseenter', function (event) {
-            event.target.classList.add('active');
-        });
-
-        document.body.addEventListener('click', function (event) {
-            if (event.target.closest('#j-menu')) {
-                // console.log(event.target.closest('#j-menu'))
-            } else {
-                menu.classList.remove('active');
-            }
-        });
-
-    </script>
+    <!-- 页面操作逻辑 -->
+    <script src="index.js"></script>
 </body>
 
 </html>
