--- a/pages/es6/es6-4.html
+++ b/pages/es6/es6-4.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        //判断成绩功能
-        let score = [
-            {id:1,price:123},
-            {id:2,price:13212},
-            {id:3,price:123},
-            {id:4,price:11232},
-            {id:5,price:11232},
-            ];
-        //反正就是要里面有个布尔值来判断是否要return
-        let result = score.filter(item =>item.price>10000);
-        console.log(result);
-   
+        function* doSometing() {
+            alert(1);
+            yield;
+            alert(2);
+        }
+        var obj = doSometing();
+        obj.next();
     </script>
 </body>
+
 </html>
