基础测试38作业

--- a/pages/js/js12.html
+++ b/pages/js/js12.html
@@ -10,13 +10,16 @@
 
 <body>
     <script>
-        let str = '<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 2a1 1 0 0 1 1-1h13a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V2z" fill="#0067E6"/><path fill-rule="evenodd" clip-rule="evenodd" d="M7 6a1 1 0 0 1 1-1h9l5 5v12a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V6z" fill="#FEAEA5"/><path fill-rule="evenodd" clip-rule="evenodd" d="M17 5l5 5h-4a1 1 0 0 1-1-1V5z" fill="#0067E6"/></svg>';
-        // 第一题 只要是file="none的fine=" 移除fine="到" 结束
-        str = str.replace(/file="\d{1}/g,'')
+        let str =
+            '<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 2a1 1 0 0 1 1-1h13a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V2z" fill="#0067E6"/><path fill-rule="evenodd" clip-rule="evenodd" d="M7 6a1 1 0 0 1 1-1h9l5 5v12a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V6z" fill="#FEAEA5"/><path fill-rule="evenodd" clip-rule="evenodd" d="M17 5l5 5h-4a1 1 0 0 1-1-1V5z" fill="#0067E6"/></svg>';
+        // var str1 = str.replace(/fill="(?!none")[^"]+"/g, "");
+        // 第一步找到fill=" 第二步判断到"为止，中间none出现0次
+        // str = str.replace(/fill="([^"]*)"/g, '');
+        console.log(str.replace(/fill="[^(none)]+"/g, ''));
         // 第二题
         window.btoa(str);
         // 第三题
-        str.replace(/["%#{}<>]/g,encodeURI);
+        str.replace(/["%#{}<>]/g, encodeURI);
     </script>
 </body>
 
