--- a/pages/css/css7.html
+++ b/pages/css/css7.html
@@ -17,6 +17,20 @@
             background: pink;
             margin-top: auto;
         }
+
+        /* .container {
+            display: table;
+            height: 100vh;
+        }
+
+        .content {
+            display: table-row;
+        }
+
+        .footer {
+            display: table-cell;
+            vertical-align: bottom;
+        } */
     </style>
 </head>
 
