--- a/pages/css/css7.html
+++ b/pages/css/css7.html
@@ -23,6 +23,15 @@
             height: 100vh;
         }
 
+        .footer {
+            display: table-footer-group;
+        } */
+
+        /* .container {
+            display: table;
+            height: 100vh;
+        }
+
         .content {
             display: table-row;
         }
