--- a/pages/es5/es5-3.html
+++ b/pages/es5/es5-3.html
@@ -13,10 +13,10 @@
         //判断字符串开头是否
         const str = 'https://www.baidu.com';
         if (str.startsWith('http:')) {
-            alert('http协议')
+            console.log('http协议')
         }
         if (str.startsWith('https:')) {
-            alert('https协议')
+            console.log('https协议')
         }
         console.log(str.startsWith('http:'));
 
@@ -25,13 +25,13 @@
         const str1 = 'asd.jpg';
         const str2 = 'asd.png';
         if (str.endsWith('.png')) {
-            alert('png文件')
+            console.log('png文件')
         } else if (str.endsWith('.jpg')) {
-            alert('jpg文件')
+            console.log('jpg文件')
         } else if (str.endsWith('.text')) {
-            alert('text文件');
+            console.log('text文件');
         } else {
-            alert('其他');
+            console.log('其他');
         }
     </script>
 </body>
