--- a/pages/es6/es6-3.html
+++ b/pages/es6/es6-3.html
@@ -33,7 +33,7 @@
             console.log(json);
             console.log(arr);
         }, function () {
-            alert('失败了！');
+            console.log('失败了！');
         })
     </script>
 </body>
