--- a/pages/es6/es6-4.html
+++ b/pages/es6/es6-4.html
@@ -11,9 +11,9 @@
 <body>
     <script>
         function* doSometing() {
-            alert(1);
+            console.log(1);
             yield;
-            alert(2);
+            console.log(2);
         }
         var obj = doSometing();
         obj.next();
