--- a/pages/vue/vue5.html
+++ b/pages/vue/vue5.html
@@ -9,23 +9,108 @@
 </head>
 
 <body>
-    <div id="example"></div>
+    <ul id="example-2">
+        <li v-for="(item, index) in items">
+            {{ parentMessage }} - {{ index }} - {{ item.message }}
+        </li>
+        <!-- <div v-for="item of items"></div> -->
+    </ul>
+    <ul id="v-for-object" class="demo">
+        <li v-for="(value, name, index) in object">
+            {{ index }}. {{ name }}: {{ value }}
+        </li>
+    </ul>
+    <div id="todo-list-example">
+        <form v-on:submit.prevent="addNewTodo">
+            <label for="new-todo">Add a todo</label>
+            <input v-model="newTodoText" id="new-todo" placeholder="E.g. Feed the cat">
+            <button>Add</button>
+        </form>
+        <ul>
+            <li is="todo-item" v-for="(todo, index) in todos" v-bind:key="todo.id" v-bind:title="todo.title"
+                v-on:remove="todos.splice(index, 1)"></li>
+        </ul>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
-        var data = {
-            a: 1
-        }
+        var example2 = new Vue({
+            el: '#example-2',
+            data: {
+                parentMessage: 'Parent',
+                items: [{
+                        message: 'Foo'
+                    },
+                    {
+                        message: 'Bar'
+                    }
+                ]
+            }
+        })
+        new Vue({
+            el: '#v-for-object',
+            data: {
+                object: {
+                    title: 'How to do lists in Vue',
+                    author: 'Jane Doe',
+                    publishedAt: '2016-04-10'
+                }
+            }
+        })
         var vm = new Vue({
-            el: '#example',
-            data: data
+            data: {
+                items: ['a', 'b', 'c']
+            }
+        })
+        // 当你利用索引直接设置一个数组项时，例如：vm.items[indexOfItem] = newValue
+        // 当你修改数组的长度时，例如：vm.items.length = newLength
+        vm.items[1] = 'x' // 不是响应性的
+        vm.items.length = 2 // 不是响应性的
+        // Vue.set
+        // Vue.set(vm.items, indexOfItem, newValue)
+        // Array.prototype.splice
+        // vm.items.splice(indexOfItem, 1, newValue)
+        // 你也可以使用 vm.$set 实例方法，该方法是全局方法 Vue.set 的一个别名：
+        // vm.$set(vm.items, indexOfItem, newValue)
+        // vm.items.splice(newLength)
+        // 还是由于 JavaScript 的限制，Vue 不能检测对象属性的添加或删除：
+        Vue.component('todo-item', {
+            template: '\
+                        <li>\
+                        {{ title }}\
+                        <button v-on:click="$emit(\'remove\')">Remove</button>\
+                        </li>\
+                    ',
+            props: ['title']
         })
 
-        vm.$data === data // => true
-        vm.$el === document.getElementById('example') // => true
-        console.log(vm.$el === document.getElementById('example'))
-        // $watch 是一个实例方法
-        vm.$watch('a', function (newValue, oldValue) {
-            // 这个回调将在 `vm.a` 改变后调用
+        new Vue({
+            el: '#todo-list-example',
+            data: {
+                newTodoText: '',
+                todos: [{
+                        id: 1,
+                        title: 'Do the dishes',
+                    },
+                    {
+                        id: 2,
+                        title: 'Take out the trash',
+                    },
+                    {
+                        id: 3,
+                        title: 'Mow the lawn'
+                    }
+                ],
+                nextTodoId: 4
+            },
+            methods: {
+                addNewTodo: function () {
+                    this.todos.push({
+                        id: this.nextTodoId++,
+                        title: this.newTodoText
+                    })
+                    this.newTodoText = ''
+                }
+            }
         })
     </script>
 </body>
