--- a/pages/vue/vue6.html
+++ b/pages/vue/vue6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>vue</title>
+    <title>表单输入绑定</title>
 </head>
 
 <body>
@@ -18,11 +18,12 @@
         <span>Selected: {{ selected }}</span>
         <input v-model.number="age" type="number">
         <span>Selected: {{ age }}</span>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+        var a = '\"123\"';
+        console.log(a);
         new Vue({
             el: '#app',
             data: {
