--- a/pages/css/css13.html
+++ b/pages/css/css13.html
@@ -1,13 +1,125 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>css 基础测试13</title>
+    <style>
+        css-icon {
+            display: inline-block;
+            height: 1em;
+            width: 1em;
+            font-size: 16px;
+            box-sizing: border-box;
+            text-indent: -9999px;
+            vertical-align: -4px;
+            position: relative;
+        }
+
+        css-icon::before,
+        css-icon::after {
+            content: '';
+            box-sizing: inherit;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+
+        .icon-caret::before {
+            border: .3em solid transparent;
+            border-top-color: currentColor;
+            -ms-transform: translate(-50%, -25%);
+            transform: translate(-50%, -25%);
+        }
+
+        svg {
+            height: 20px;
+            vertical-align: -5px;
+        }
+
+        .i-btn-group {
+            display: flex;
+        }
+
+        .i-btn {
+            margin-left: 10px;
+            font-size: 0;
+        }
+
+        .i-btn-operation {
+            border: 1px solid #c4c8cc;
+            color: #24292e;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 3px 0 0 3px;
+            text-decoration: none;
+            background-color: #eff3f6;
+            background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
+        }
+
+        .i-btn-operation:hover {
+            border-color: #a5a9ac;
+        }
+
+        .i-btn-count {
+            border: 1px solid #c4c8cc;
+            border-left: none;
+            color: #24292e;
+            font-size: 12px;
+            padding: 5px;
+            border-radius: 0 3px 3px 0;
+            text-decoration: none;
+        }
+
+        .i-btn-count:hover {
+            color: #0366d6;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="i-btn-group">
+        <div class="i-btn">
+            <a href="javascript:" class="i-btn-operation">
+                <svg class="octicon octicon-eye v-align-text-bottom" viewBox="0 0 16 16" version="1.1" width="16"
+                    height="16" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z">
+                    </path>
+                </svg>
+                watch
+                <css-icon class="icon-caret"></css-icon>
+            </a>
+            <a href="javascript:" class="i-btn-count">64</a>
+        </div>
+        <div class="i-btn">
+            <a href="javascript:" class="i-btn-operation">
+                <svg class="octicon octicon-star v-align-text-bottom" viewBox="0 0 14 16" version="1.1" width="14"
+                    height="16" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path>
+                </svg>
+                Unstar
+            </a>
+            <a href="javascript:" class="i-btn-count">445</a>
+        </div>
+        <div class="i-btn">
+            <a href="javascript:" class="i-btn-operation">
+                <svg class="octicon octicon-repo-forked v-align-text-bottom" viewBox="0 0 10 16" version="1.1"
+                    width="10" height="16" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M8 1a1.993 1.993 0 00-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 002 1a1.993 1.993 0 00-1 3.72V6.5l3 3v1.78A1.993 1.993 0 005 15a1.993 1.993 0 001-3.72V9.5l3-3V4.72A1.993 1.993 0 008 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z">
+                    </path>
+                </svg>
+                Fork</a>
+            <a href="javascript:" class="i-btn-count">25</a>
+        </div>
+    </div>
 </body>
+
 </html>
