--- a/pages/css/css13.html
+++ b/pages/css/css13.html
@@ -7,119 +7,190 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>css 基础测试13</title>
     <style>
-        css-icon {
-            display: inline-block;
-            height: 1em;
-            width: 1em;
-            font-size: 16px;
-            box-sizing: border-box;
-            text-indent: -9999px;
-            vertical-align: -4px;
-            position: relative;
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
         }
 
-        css-icon::before,
-        css-icon::after {
-            content: '';
-            box-sizing: inherit;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
-
-        .icon-caret::before {
-            border: .3em solid transparent;
-            border-top-color: currentColor;
-            -ms-transform: translate(-50%, -25%);
-            transform: translate(-50%, -25%);
-        }
-
-        svg {
-            height: 20px;
-            vertical-align: -5px;
-        }
-
-        .i-btn-group {
+        /** 主容器 **/
+        .btn-group-container {
             display: flex;
         }
 
-        .i-btn {
-            margin-left: 10px;
-            font-size: 0;
+        /** 按钮组 **/
+        .btn-group {
+            display: flex;
+            align-items: center;
         }
 
-        .i-btn-operation {
-            border: 1px solid #c4c8cc;
-            color: #24292e;
+        .btn-group+.btn-group {
+            margin-left: 10px;
+        }
+
+        .btn-group .btn {
+            border-radius: 0;
+        }
+
+        .btn-group>.btn:not(:first-child),
+        .btn-group>.details-menu:not(:first-child) {
+            margin-left: -1px;
+        }
+
+        .btn-group>.btn:first-child,
+        .btn-group>.details-menu:first-child>.btn {
+            border-top-left-radius: .25em;
+            border-bottom-left-radius: .25em;
+        }
+
+        .btn-group>.btn:last-child,
+        .btn-group>.details-menu:last-child>.btn {
+            border-top-right-radius: .25em;
+            border-bottom-right-radius: .25em;
+        }
+
+        /** 按钮 **/
+        .btn {
+            position: relative;
+            display: inline-flex;
+            align-items: center;
+            padding: 3px 9px;
             font-size: 12px;
-            font-weight: bold;
-            padding: 5px 10px;
-            border-radius: 3px 0 0 3px;
+            font-weight: 600;
+            line-height: 20px;
+            white-space: nowrap;
+            vertical-align: middle;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            font-family: inherit;
+            background-repeat: repeat-x;
+            background-position: -1px -1px;
+            background-size: 110% 110%;
+            border: 1px solid #ccced0;
+            border-radius: .25em;
             text-decoration: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+
+        .btn:hover {
+            z-index: 1;
+        }
+
+        .btn>.svg-icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 2px;
+            fill: currentColor;
+            speak: none;
+        }
+
+        /** 按钮主题定义 **/
+        .btn-default {
+            color: #24292e;
             background-color: #eff3f6;
             background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
         }
 
-        .i-btn-operation:hover {
-            border-color: #a5a9ac;
+        .btn-default:hover {
+            background-color: #e6ebf1;
+            background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
+            background-position: -.5em;
+            border-color: #a5a8ac;
         }
 
-        .i-btn-count {
-            border: 1px solid #c4c8cc;
-            border-left: none;
+        .btn-link {
             color: #24292e;
-            font-size: 12px;
-            padding: 5px;
-            border-radius: 0 3px 3px 0;
-            text-decoration: none;
+            background-color: #fff;
         }
 
-        .i-btn-count:hover {
+        .btn-link:hover {
             color: #0366d6;
+        }
+
+        /** 按钮下拉菜单 **/
+        .details-menu {
+            position: relative;
+            display: block;
+        }
+
+        .details-menu-btn::-webkit-details-marker {
+            display: none;
+        }
+
+        .details-menu-btn::after {
+            content: "";
+            display: inline-block;
+            width: 0;
+            height: 0;
+            margin-left: 3px;
+            transform: translateY(25%);
+            border: 4px solid transparent;
+            border-top-color: currentColor;
+        }
+
+        .details-menu-modal {
+            position: absolute;
         }
     </style>
 </head>
 
 <body>
-    <div class="i-btn-group">
-        <div class="i-btn">
-            <a href="javascript:" class="i-btn-operation">
-                <svg class="octicon octicon-eye v-align-text-bottom" viewBox="0 0 16 16" version="1.1" width="16"
-                    height="16" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                        d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z">
-                    </path>
-                </svg>
-                watch
-                <css-icon class="icon-caret"></css-icon>
-            </a>
-            <a href="javascript:" class="i-btn-count">64</a>
+    <div class="btn-group-container">
+        <div class="btn-group">
+            <details class="details-menu">
+                <summary class="details-menu-btn btn btn-default" role="button" aria-label="watch">
+                    <svg class="svg-icon">
+                        <use xlink:href="#icon-watch"></use>
+                    </svg>
+                    Unwatch
+                </summary>
+                <div class="details-menu-modal">
+                    菜单（略）
+                </div>
+            </details>
+            <a class="btn btn-link" href="#" aria-label="63 users are watching this repository">63</a>
         </div>
-        <div class="i-btn">
-            <a href="javascript:" class="i-btn-operation">
-                <svg class="octicon octicon-star v-align-text-bottom" viewBox="0 0 14 16" version="1.1" width="14"
-                    height="16" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path>
+        <div class="btn-group">
+            <button class="btn btn-default" aria-label="star">
+                <svg class="svg-icon">
+                    <use xlink:href="#icon-star"></use>
                 </svg>
-                Unstar
-            </a>
-            <a href="javascript:" class="i-btn-count">445</a>
+                Star
+            </button>
+            <a class="btn btn-link" href="#" aria-label="445 users starred this repository">445</a>
         </div>
-        <div class="i-btn">
-            <a href="javascript:" class="i-btn-operation">
-                <svg class="octicon octicon-repo-forked v-align-text-bottom" viewBox="0 0 10 16" version="1.1"
-                    width="10" height="16" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                        d="M8 1a1.993 1.993 0 00-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 002 1a1.993 1.993 0 00-1 3.72V6.5l3 3v1.78A1.993 1.993 0 005 15a1.993 1.993 0 001-3.72V9.5l3-3V4.72A1.993 1.993 0 008 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z">
-                    </path>
+        <div class="btn-group">
+            <button class="btn btn-default" aria-label="fork">
+                <svg class="svg-icon">
+                    <use xlink:href="#icon-fork"></use>
                 </svg>
-                Fork</a>
-            <a href="javascript:" class="i-btn-count">25</a>
+                Fork
+            </button>
+            <a class="btn btn-link" href="#" aria-label="25 users forked this repository">25</a>
         </div>
     </div>
+
+    <!-- svg sprite -->
+    <svg style="display:none">
+        <symbol id="icon-star" viewBox="0 0 1024 1024">
+            <path
+                d="M897.02475785 421.36072708q0 10.18094348-12.0320238 22.21296648l-167.98556122 163.82063007 39.7982321 231.38507126q0.46277048 3.23939099 0.46277049 9.25540249 0 9.71817297-4.8590865 16.42833981t-14.11448899 6.71016683q-8.79263282 0-18.51080579-5.55324181l-207.78379414-109.21375365-207.78379414 109.21375365q-10.18094348 5.55324181-18.51080579 5.55324181-9.71817297 0-14.57725948-6.71016683t-4.8590865-16.42833981q0-2.77662051 0.92554019-9.25540249l39.79823209-231.38507126-168.44833171-163.82063007q-11.56925333-12.49479349-11.56925333-22.21296648 0-17.12249514 25.91512796-21.2874263l232.31061143-33.7822206 104.12328232-210.56041464q8.79263282-18.97357548 22.67573696-18.97357548t22.67573696 18.97357548l104.12328232 210.56041464 232.31061143 33.7822206q25.91512795 4.16493117 25.91512797 21.2874263z">
+            </path>
+        </symbol>
+        <symbol id="icon-fork" viewBox="0 0 1024 1024">
+            <path
+                d="M689.1875 94.2366333a117.7115625 117.7115625 0 0 0-59.06250001 219.7125V389.54913331L512 507.6741333 393.87500001 389.54913331V313.9491333A117.7115625 117.7115625 0 0 0 334.8125 94.2366333a117.7115625 117.7115625 0 0 0-59.0625 219.7125V419.0803833l177.1875 177.18750001v105.13124999A117.7115625 117.7115625 0 0 0 512 921.11163331a117.7115625 117.7115625 0 0 0 59.0625-219.71250001V596.26788331l177.1875-177.18750001V313.9491333A117.7115625 117.7115625 0 0 0 689.1875 94.2366333zM334.8125 283.23663331C295.83124999 283.23663331 263.9375 250.75225831 263.9375 212.3616333c0-38.39062499 32.484375-70.875 70.875-70.87499999 38.39062499 0 70.875 32.484375 70.875 70.87499999 0 38.39062499-32.484375 70.875-70.875 70.87500001z m177.1875 590.62499999c-38.98125001 0-70.875-32.484375-70.875-70.875 0-38.39062499 32.484375-70.875 70.875-70.875 38.39062499 0 70.875 32.484375 70.875 70.875 0 38.39062499-32.484375 70.875-70.875 70.875z m177.1875-590.62499999c-38.98125001 0-70.875-32.484375-70.875-70.87500001 0-38.39062499 32.484375-70.875 70.875-70.87499999 38.39062499 0 70.875 32.484375 70.875 70.87499999 0 38.39062499-32.484375 70.875-70.875 70.87500001z">
+            </path>
+        </symbol>
+        <symbol id="icon-watch" viewBox="0 0 1024 1024">
+            <path
+                d="M512 209.408c-201.728 0-374.016 125.44-443.8016 302.592C137.984 689.152 310.272 814.592 512 814.592c201.9328 0 374.016-125.44 443.8016-302.592C886.016 334.848 713.9328 209.408 512 209.408z m0 504.32A201.8304 201.8304 0 0 1 310.272 512 201.7792 201.7792 0 0 1 512 310.272 201.7792 201.7792 0 0 1 713.728 512 201.8304 201.8304 0 0 1 512 713.728z m0-322.7648A121.1392 121.1392 0 0 0 390.9632 512 121.1392 121.1392 0 0 0 512 633.0368 121.1392 121.1392 0 0 0 633.0368 512 121.1392 121.1392 0 0 0 512 390.9632z">
+            </path>
+        </symbol>
+    </svg>
 </body>
 
 </html>
