--- a/pages/es6/es6-2.html
+++ b/pages/es6/es6-2.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>字符串模版</title>
 </head>
+
 <body>
     <script>
         const title = '标题asdasd';
         const content = '内容阿斯顿撒大所多阿是创造性操作操作阿萨德';
-        let str = 
+        let str =
             `<div>
             <h1>${title}</h1>
             <p>${content}</p>
             </div>
             `;
-            //这个是这么用滴
+        //这个是这么用滴
         document.body.innerHTML = str;
         // let tag = document.getElementsByTagName('body')[0];
         // tag.innerHTML(str);
         console.log(str);
     </script>
 </body>
+
 </html>
