--- a/pages/es6/es6-3.html
+++ b/pages/es6/es6-3.html
@@ -9,29 +9,37 @@
 </head>
 
 <body>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
         //要活用这个promiseALL方法
         function createPromise(url) {
             return new Promise((resolve, reject) => {
-                $.ajax({
+                var a = $.ajax({
                     url,
-                    dataType: "json",
+                    dataType: "html",
                     success(arr) {
                         resolve(arr);
                     },
                     error(arr) {
                         reject(arr);
                     }
+                }).then(html => {
+                    console.log(html)
+                }, error => {
+                    console.log(error)
                 })
+                // 因为ajax返回值里有then promise
+                console.log(a)
+
             })
         }
         Promise.all([
-            createPromise('data/arr.txt'),
-            createPromise('data/arr.txt')
-        ]).then(function (arr) {
-            let [json, arr] = arr;
-            console.log(json);
-            console.log(arr);
+            createPromise('es6-1.html'),
+            createPromise('es6-2.html')
+        ]).then(function (arr1) {
+            let [json, arr] = arr1;
+            // console.log(json);
+            // console.log(arr);
         }, function () {
             console.log('失败了！');
         })
