--- a/pages/es6/es6-5.html
+++ b/pages/es6/es6-5.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>async</title>
 </head>
 
 <body>
     <script>
-        async function getStockPriceByName(name) {
-            const symbol = await getStockSymbol(name);
-            const stockPrice = await getStockPrice(symbol);
-            return stockPrice;
+        function sleep(second) {
+            return new Promise((resolve, reject) => {
+                setTimeout(function () {
+                    resolve()
+                }, second * 1000)
+            })
         }
 
-        getStockPriceByName('goog').then(function (result) {
-            console.log(result);
-        });
+        (async () => {
+            console.log(1)
+            await sleep(1);
+            console.log(2)
+            await sleep(3);
+            console.log(3)
+        })()
+        // async function getStockPriceByName(name) {
+        //     const symbol = await getStockSymbol(name);
+        //     const stockPrice = await getStockPrice(symbol);
+        //     return stockPrice;
+        // }
+
+        // getStockPriceByName('goog').then(function (result) {
+        //     console.log(result);
+        // });
         // 一比较就会发现，async函数就是将 Generator 函数的星号（*）替换成async，将yield替换成await，仅此而已。
         //（1）内置执行器。
 
