--- a/pages/js/js15.html
+++ b/pages/js/js15.html
@@ -19,36 +19,32 @@
         // 第二题
         function strDoubleByte(str) {
             const doubleByte = '０１２３４５６７８９';
-            str = str.replace(' ','');
-            return doubleByte.split('').reduce((str, s, idx) => {
-                return str.replace(new RegExp(s, 'g'), idx)
+            let strTel = ''
+            return doubleByte.split('').reduce((str, number, index) => {
+                // 找到id
+                return str.replace(new RegExp(number, 'g'), index)
             }, str);
         }
-        console.log(strDoubleByte(' １　３　２　０　８　０　３　３　６　２　１  '));
+        console.log(strDoubleByte('１３２０８０３３６２１'));
 
         // 第三题
         function strRemove86(str) {
-            return str.replace(/\+/g, function (match) {
-                return match.replace('-', '').toUpperCase()
-            })
+            // 应该要是11位的
+            return str.replace(/^\+86/, '');
         }
         console.log(strRemove86('+8613208033621'));
 
         // 第四题
-        // function strRegular1(str) {
-        //     let strTel = str
-        //     strTel = strTel.trim()
-        //     return strTel
-        // }
-        // console.log(telRex(' 13208033621 '));
+        function strRemoveD(str) {
+            return str.replace(/\D/g, '')
+        }
+        console.log(strRemoveD('1320-8033 621'));
 
         // 第五题
-        // function strRegular1(str) {
-        //     let strTel = str
-        //     strTel = strTel.trim()
-        //     return strTel
-        // }
-        // console.log(telRex(' 13208033621 '));
+        function strValid(str) {
+            return /^1\d{10}$/.test(str);
+        }
+        console.log(strValid('13208033621'));
     </script>
 </body>
 
